--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,25 @@
 {
-    "name": "myfi",
+    "name": "ashoemaker/myfi",
     "type": "project",
     "description": "financial tracker made with php",
     "keywords": ["finance", "php"],
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "slim/slim": "4.*",
+        "illuminate/database": "^10.20",
+        "slim/psr7": "^1.6",
+        "php-di/slim-bridge": "^3.4",
+        "vlucas/phpdotenv": "^5.5",
+        "tracy/tracy": "^2.10",
+        "slim/php-view": "^3.2"
     },
     "autoload": {
+        "files": [
+            "./app/helpers.php"
+        ],
         "psr-4": {
-            "App\\": "app/",
+            "App\\": "app/"
         }
-    },
+    }
 }
